@@ -1,0 +1,25 @@
+#! /bin/sh
+
+# Make sure a conditional include statement is handled properly.
+
+. $srcdir/defs || exit 1
+
+cat >> configure.in << 'END'
+AM_CONDITIONAL(TOBE, false)
+END
+
+cat > Makefile.am << 'END'
+if TOBE
+include adjunct
+endif
+END
+
+cat > adjunct << 'END'
+target: dependency
+	rule
+END
+
+$AUTOMAKE || exit 1
+
+grep '^target' Makefile.in && exit 1
+exit 0
