@@ -1,0 +1,28 @@
+#! /bin/sh
+
+# Test to make sure .c.o rule is only included once.
+
+. $srcdir/defs || exit 1
+
+cat >> configure.in << 'END'
+AC_PROG_CC
+AC_PROG_LIBTOOL
+END
+
+cat > Makefile.am << 'END'
+lib_LTLIBRARIES = libltdl.la
+libltdl_la_SOURCES = ltdl.c ltdl.h
+END
+
+: > ltdl.c
+: > ltdl.h
+
+: > ltconfig
+: > ltmain.sh
+
+$AUTOMAKE -a || exit 1
+
+test "`fgrep '.c.o' Makefile.in | wc -l`" -eq 1
+
+# FIXME: make this fail just like the real ltdl
+exit 1
