@@ -1,5 +1,15 @@
 1999-12-13  Tom Tromey  <tromey@cygnus.com>
 
+	* nostdinc.test: New file.
+	* Makefile.am (TESTS): Added nostdinc.test.
+
+	* condincl2.test: New file.
+	* condincl.test: New file.
+	* Makefile.am (TESTS): Added condincl.test, condincl2.test.
+
+	* suffix2.test: New file.
+	* Makefile.am (TESTS): Added suffix2.test.
+
 	* subobj.test: Remove final test.
 
 1999-12-12  Tom Tromey  <tromey@cygnus.com>
